--- a/styles/Tabs.module.scss
+++ b/styles/Tabs.module.scss
@@ -19,6 +19,7 @@
     list-style-type: none;
     padding-bottom: 6rem;
     position: relative;
+    cursor: pointer;
 }
 
 // .active::active {
